--- a/src/pug/partials/header.pug
+++ b/src/pug/partials/header.pug
@@ -26,7 +26,7 @@ header.header
                         a.link(href="#" class='text-uppercase')
                             i.fas.fa-sign-in-alt
                             | login
-            i.fas.fa-expand.toggle-fullscreen.text-white.fa-lg.d-lg-block.d-none
+            i.fas.fa-expand.toggle-fullscreen.fa-lg.d-lg-block.d-none
             .bars.d-lg-none
                 - for(var i = 0; i <= 2; i++)
                     span.line
