--- a/src/pug/login.pug
+++ b/src/pug/login.pug
@@ -68,7 +68,8 @@ html
                                             ul.position-of-player
                                                 li 
                                                     i.fa.fa-angle-right
-                                            ul.submenu
+                                                li.text-placeholder
+                                            ul.position-submenu
                                                 li.text-capitalize right
                                                 li.text-capitalize  left
                                                 li.text-capitalize  both
