--- a/src/sass/partials/_log.scss
+++ b/src/sass/partials/_log.scss
@@ -176,6 +176,8 @@
                     background: rgba(0,0,0, 0.1);
                     width: 100%;
                     height: 48px;
+                    padding: 1rem;
+                    color: #fff;
                     border-radius: 4px;
                     cursor: pointer;
                     transition: 0.3s ease;
@@ -186,23 +188,25 @@
                         transform: translateY(-50%);
                         color: #fff;
                         font-size: 1.2rem;
-                        transform-origin: 0% 0%;
+                        transform-origin: top right;
+                        transform-box: fill-box;
                         transition: all .2s linear;
                         &.rotate-angle {
                             transform: rotate(90deg);
+                            top: 60%;
                         }
                     }
                 }
-                .submenu {
+                .position-submenu {
                     width: 100%;
                     margin: .5rem 0;
-                    color: #eee;
-                    background: rgba(0,0,0, 0.1);
+                    color: #242424;
+                    background: rgba(255,255,255, 0.8);
                     display: none;
                     li {
                         padding: 1rem;
                         cursor: pointer;
-                        border-bottom: 1px solid rgba(0,0,0,.2);
+                        border-bottom: 1px solid rgba(255,255,255,.5);
                         transition: all .2s linear;
                         &:last-child {
                             border-bottom: 0;
