--- a/src/pug/partials/head.pug
+++ b/src/pug/partials/head.pug
@@ -10,4 +10,5 @@ link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dosis:400,60
 link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet')
 link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css")
 link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css")
+link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datedropper/2.0/datedropper.min.css")
 link(rel='stylesheet' href='css/style.min.css')
