--- a/src/sass/partials/_log.scss
+++ b/src/sass/partials/_log.scss
@@ -165,7 +165,6 @@
                     height: 48px;
                     padding: 1rem;
                     color: #fff;
-                    backdrop-filter: blur(15px);
                     border-radius: 4px;
                     cursor: pointer;
                     transition: 0.3s ease;
@@ -217,13 +216,19 @@
                         }
                     }
                 }
-                i.birthdate-icon {
-                    display: block;
-                    position: absolute;
-                    top: 50%;
-                    right: 20px;
-                    font-size: 1.2rem;
-                    color: #eee;
+                &.birthdate-calendar {
+                    input#datepicker {
+                        cursor: pointer;
+                    }
+                    i.birthdate-icon {
+                        display: block;
+                        position: absolute;
+                        top: 50%;
+                        right: 20px;
+                        font-size: 1.2rem;
+                        color: #eee;
+                        pointer-events: none;
+                    }
                 }
             }
         
